[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/ui/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/img/tiles/sand.tex" type="Texture" id=2]
[ext_resource path="res://assets/fonts/ubuntu/menu/title.fnt" type="BitmapFont" id=3]
[ext_resource path="res://assets/fonts/ubuntu/menu/description.fnt" type="BitmapFont" id=4]
[ext_resource path="res://assets/fonts/ubuntu/menu/buttons/26.fnt" type="BitmapFont" id=5]
[ext_resource path="res://assets/fonts/ubuntu/menu/generator.fnt" type="BitmapFont" id=6]
[ext_resource path="res://scenes/generator.tscn" type="PackedScene" id=7]

[node name="mainMenu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1028.0
margin/bottom = 600.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 0.0
margin/right = 342.0
margin/bottom = 115.0
custom_fonts/font = ExtResource( 3 )
text = "Project 51"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="description" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 17.0
margin/top = 55.0
margin/right = 541.0
margin/bottom = 170.0
custom_fonts/font = ExtResource( 4 )
text = "Sandbox game ( Version ALPHA )"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="menu" type="VBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 740.0
margin/top = 210.0
margin/right = 1004.0
margin/bottom = 580.0
custom_constants/separation = 15
alignment = 2

[node name="new_world" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 109.0
margin/right = 264.0
margin/bottom = 140.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "New world"
flat = false

[node name="load_world" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 155.0
margin/right = 264.0
margin/bottom = 186.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Load world"
flat = false

[node name="manage_mods" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 201.0
margin/right = 264.0
margin/bottom = 232.0
custom_fonts/font = ExtResource( 5 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Manage mods"
flat = false

[node name="settings" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 247.0
margin/right = 264.0
margin/bottom = 278.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Settings"
flat = false

[node name="credits" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 293.0
margin/right = 264.0
margin/bottom = 324.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Credits"
flat = false

[node name="quit" type="Button" parent="menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 339.0
margin/right = 264.0
margin/bottom = 370.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[node name="newWorldPanel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 431.0
margin/top = 318.0
margin/right = 717.0
margin/bottom = 581.0

[node name="size" type="SpinBox" parent="newWorldPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = 12.0
margin/right = 275.0
margin/bottom = 36.0
range/min = 80.0
range/max = 400.0
range/step = 1.0
range/page = 0.0
range/value = 80.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="islands" type="SpinBox" parent="newWorldPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = 51.0
margin/right = 276.0
margin/bottom = 75.0
range/min = 1.0
range/max = 1000.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="seed" type="SpinBox" parent="newWorldPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = 89.0
margin/right = 276.0
margin/bottom = 113.0
range/min = 1.0
range/max = 20000.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="name" type="LineEdit" parent="newWorldPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 127.0
margin/right = 260.0
margin/bottom = 151.0
placeholder/text = "Name your world"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="continue" type="Button" parent="newWorldPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = 215.0
margin/right = 277.0
margin/bottom = 254.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Continue"
flat = false

[node name="errors" type="Label" parent="newWorldPanel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 186.0
margin/right = 276.0
margin/bottom = 208.0
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="generator" parent="." instance=ExtResource( 7 )]

[node name="loadWorldPanel" type="Panel" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 431.0
margin/top = 318.0
margin/right = 717.0
margin/bottom = 581.0

[node name="name" type="LineEdit" parent="loadWorldPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 8.0
margin/right = 278.0
margin/bottom = 32.0
placeholder/text = "World's name"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="load" type="Button" parent="loadWorldPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 9.0
margin/top = 40.0
margin/right = 137.0
margin/bottom = 65.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Load"
flat = false

[node name="delete" type="Button" parent="loadWorldPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 147.0
margin/top = 40.0
margin/right = 275.0
margin/bottom = 65.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Delete"
flat = false

[node name="worlds" type="VBoxContainer" parent="loadWorldPanel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 77.0
margin/right = 276.0
margin/bottom = 252.0
alignment = 0

[connection signal="pressed" from="menu/new_world" to="." method="_on_new_world_pressed"]

[connection signal="pressed" from="menu/load_world" to="." method="_on_load_pressed"]

[connection signal="pressed" from="newWorldPanel/continue" to="." method="_on_continue_pressed"]

[connection signal="pressed" from="loadWorldPanel/load" to="." method="_on_load_world_pressed"]

[connection signal="pressed" from="loadWorldPanel/delete" to="." method="_on_delete_world_pressed"]


